# pse-pir-exex

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/alloy-wasm/src/: lib.rs
crates/burner-wallet/static/pir-pkg/: package.json
crates/inspire-client/: Cargo.toml
crates/inspire-client-wasm/examples/: index.html
crates/inspire-client-wasm/src/: bucket_index.rs  client.rs  error.rs  ubt_index.rs
crates/inspire-client/src/: client.rs  lib.rs
crates/inspire-core/: Cargo.toml
crates/inspire-core/src/: balance.rs  config.rs  error.rs  lane.rs  lib.rs  manifest.rs  params.rs  routing.rs  state_format.rs
crates/inspire-server/: Cargo.toml
crates/inspire-server/src/: error.rs  lib.rs  metrics.rs  routes.rs  server.rs  state.rs
crates/inspire-updater/: Cargo.toml
crates/inspire-updater/src/: config.rs  lib.rs  rpc.rs  service.rs  state.rs  writer.rs
crates/lane-builder/: Cargo.toml
crates/lane-builder/src/: balance_extractor.rs  builder.rs  contracts.rs  delta_exex.rs  exex.rs  extractor.rs  gas_tracker.rs  hybrid_scorer.rs  lib.rs  reload.rs  setup.rs
crates/pir-client/: Cargo.toml
crates/pir-client/src/: hint_store.rs  query.rs
docs/: ARCHITECTURE.md  GAS_BACKFILL.md  LIVE_UPDATES.md  PROTOCOL.md  STATE_FORMAT.md
examples/: benchmark_large.rs  benchmark_real_sizes.rs  benchmark_seed_expansion.rs
experiments/alloy-wasm/: Cargo.toml  test.html
experiments/alloy-wasm/pkg/: alloy_wasm.d.ts  alloy_wasm.js  alloy_wasm_bg.wasm  alloy_wasm_bg.wasm.d.ts
experiments/alloy-wasm/src/: lib.rs
scripts/: build-usdc-demo.py  deploy-eip7864-state.sh  extract-usdc-state.py
tests/: e2e.rs  exex_integration.rs  server_e2e.rs  state_format.rs
web/wallet-core/: package.json
web/wallet-core/examples/: index.html  state-query.html
web/wallet-core/src/: helios-verifier.ts  index.ts  pir-client.ts  types.ts  verification.test.ts  wallet-core.ts
