[workspace]
resolver = "2"
members = [
    "crates/pir-core",
    "crates/pir-seeder",
    "crates/pir-server-b",
    "crates/pir-client",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pse-team/pse-pir-exex"

[workspace.dependencies]
# Crypto
aes = "0.8"
rand = "0.8"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async
tokio = { version = "1.0", features = ["full"] }

# Networking
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }

# Storage
memmap2 = "0.9"

# IPFS/DHT
ipfs-api-backend-hyper = "0.6"

# Reth (for ExEx)
reth = { git = "https://github.com/paradigmxyz/reth" }
reth-exex = { git = "https://github.com/paradigmxyz/reth" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth" }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Encoding
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Internal crates
pir-core = { path = "crates/pir-core" }
