[package]
name = "inspire-exex"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "crates/inspire-core",
    "crates/inspire-server",
    "crates/inspire-client",
    "crates/inspire-client-wasm",
    "crates/lane-builder",
    "crates/burner-wallet",
    "crates/alloy-wasm",
]

[dependencies]
inspire-core = { path = "crates/inspire-core" }
inspire-server = { path = "crates/inspire-server" }
inspire-client = { path = "crates/inspire-client" }
lane-builder = { path = "crates/lane-builder" }
inspire-pir = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[[test]]
name = "e2e"
path = "tests/e2e.rs"

[[test]]
name = "exex_integration"
path = "tests/exex_integration.rs"

[[example]]
name = "benchmark_seed_expansion"
path = "examples/benchmark_seed_expansion.rs"

[[example]]
name = "benchmark_real_sizes"
path = "examples/benchmark_real_sizes.rs"

[[example]]
name = "benchmark_large"
path = "examples/benchmark_large.rs"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/igor53627/inspire-exex"

[workspace.dependencies]
# Use inspire-rs for PIR primitives
inspire-pir = { path = "/Users/user/pse/inspire" }

# Crypto
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async
tokio = { version = "1.0", features = ["full"] }

# Networking
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }

# Storage
memmap2 = "0.9"

# Reth (for lane building)
reth = { git = "https://github.com/paradigmxyz/reth" }
reth-exex = { git = "https://github.com/paradigmxyz/reth" }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Encoding
hex = "0.4"

# Lock-free concurrency
arc-swap = "1.7"

# Metrics
metrics = "0.24"

# Alloy for RPC access (gas backfill) - must match reth v1.9.3's alloy version
alloy-provider = { version = "1.1", features = ["reqwest"] }
alloy-rpc-types = "1.1"
alloy-primitives = "1.5"
alloy-transport = "1.1"

# Async utilities
futures = "0.3"

# Progress bars
indicatif = "0.17"
