[package]
name = "inspire-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
inspire-core = { path = "../inspire-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
