[package]
name = "inspire-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "inspire-client"
path = "src/bin/main.rs"

[dependencies]
inspire-core = { path = "../inspire-core" }
inspire-pir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
tracing-subscriber = { workspace = true }
