[package]
name = "inspire-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
inspire-core = { path = "../inspire-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
