[package]
name = "inspire-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "inspire-server"
path = "src/bin/main.rs"

[dependencies]
inspire-core = { path = "../inspire-core" }
inspire-pir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
arc-swap = { workspace = true }
