[package]
name = "inspire-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "inspire-server"
path = "src/bin/main.rs"

[[bin]]
name = "loadtest"
path = "src/bin/loadtest.rs"

[dependencies]
inspire-core = { path = "../inspire-core" }
inspire-client = { path = "../inspire-client" }
inspire-pir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
futures-util = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
arc-swap = { workspace = true }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors"] }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
