[package]
name = "inspire-updater"
version.workspace = true
edition.workspace = true

[[bin]]
name = "updater"
path = "src/bin/updater.rs"

[dependencies]
clap = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
alloy-provider = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-transport = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
inspire-core = { path = "../inspire-core" }
tiny-keccak = { workspace = true }
