[package]
name = "inspire-updater"
version.workspace = true
edition.workspace = true

[[bin]]
name = "updater"
path = "src/bin/updater.rs"

[dependencies]
clap = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
alloy-primitives = { workspace = true }
alloy-rpc-client = { workspace = true }
alloy-rpc-types = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
inspire-core = { path = "../inspire-core" }
tiny-keccak = { workspace = true }

[dev-dependencies]
tempfile = "3.24.0"
