[package]
name = "lane-builder"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Enable dev-keys feature to allow saving secret keys (for testing/development only)
dev-keys = []
# Enable Reth ExEx integration for real-time lane updates
exex = ["dep:reth-ethereum", "dep:reth-tracing", "dep:eyre", "dep:futures", "dep:clap", "dep:metrics"]
# Enable gas backfill for data-driven hot lane selection
backfill = ["dep:alloy-provider", "dep:alloy-rpc-types", "dep:alloy-primitives", "dep:alloy-transport", "dep:futures", "dep:clap", "dep:indicatif"]
# Enable balance extraction for ETH/USDC hot lane
balance = ["dep:alloy-provider", "dep:alloy-rpc-types", "dep:alloy-primitives", "dep:alloy-transport", "dep:futures", "dep:clap", "dep:indicatif"]
# Enable full state dump from reth MDBX database
state-dump = ["dep:mdbx-rs", "dep:eyre", "dep:clap", "dep:indicatif", "dep:color-eyre"]
# Enable bucket index builder for sparse PIR lookups
bucket-index = ["dep:clap", "dep:indicatif", "dep:tiny-keccak", "dep:zstd"]
# Enable test database generator
gen-test-db = ["dep:clap", "dep:eyre", "dep:tiny-keccak"]

[[bin]]
name = "lane-builder"
path = "src/bin/main.rs"

[[bin]]
name = "lane-exex"
path = "src/bin/exex.rs"
required-features = ["exex"]

[[bin]]
name = "lane-backfill"
path = "src/bin/backfill.rs"
required-features = ["backfill"]

[[bin]]
name = "balance-builder"
path = "src/bin/balance.rs"
required-features = ["balance"]

[[bin]]
name = "state-dump"
path = "src/bin/state_dump.rs"
required-features = ["state-dump"]

[[bin]]
name = "bucket-index"
path = "src/bin/bucket_index.rs"
required-features = ["bucket-index"]

[[bin]]
name = "gen-test-db"
path = "src/bin/gen_test_db.rs"
required-features = ["gen-test-db"]

[dependencies]
inspire-core = { path = "../inspire-core" }
inspire-pir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }

# Reth ExEx dependencies (optional, behind 'exex' feature)
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", optional = true, features = ["exex", "node-api", "node", "cli"] }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", optional = true }
eyre = { version = "0.6", optional = true }
futures = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }

# Alloy for RPC access (gas backfill)
alloy-provider = { workspace = true, optional = true }
alloy-rpc-types = { workspace = true, optional = true }
alloy-primitives = { workspace = true, optional = true }
alloy-transport = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }

# MDBX for direct state dump
mdbx-rs = { git = "https://github.com/igor53627/mdbx-rs", optional = true }
color-eyre = { version = "0.6", optional = true }

# Bucket index builder
tiny-keccak = { version = "2.0", features = ["keccak"], optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
tempfile = "3.10"
