[package]
name = "pir-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pir-core = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
hex = "0.4"

# Local storage
bincode = { workspace = true }

[features]
default = []
wasm = []
